[TEST] 업그레이드 대기·장인 점유·시즌 패스 감소·섬 확장 재배치
- 업그레이드 시간이 있으면 레벨은 그대로, buildCompleteAt 만 설정
- 장인이 모두 작업 중이면 업그레이드 불가
- 시즌 패스 20% 감소 → 600초가 480초
- 성 업그레이드 완료 → 섬 확장 + 중심 기준 재배치 + 위반 건물 자동 보관 + 알림